animesimple fix active ep on dark mode

--- a/src/pages/AnimeSimple/style.less
+++ b/src/pages/AnimeSimple/style.less
@@ -1,3 +1,7 @@
 .mal-sync-active {
-  background-color: #00d5ff;
+  background-color: #00d5ff !important;
+}
+
+body.dark .mal-sync-active {
+  color: black !important;
 }
